tests/NormalTests/paczka1/small_fuzzy/77948794.err
Error in line 2: EhP5chjk9a S534 9,4
Error in line 7: EhP5chjk9a S951 70,7
Error in line 9: EhP5chjk9a S891 47,7
